# memory-lol

./: Cargo.toml  README.md
.github/workflows/: java-ci.yaml
examples/databases/: user-2021-01-01.tar
java/: .gitignore  checkstyle-suppressions.xml  checkstyle.xml  pom.xml
java/src/main/java/lol/memory/ts/: Item.java  ReplyInfo.java  Twitter.java  UserInfo.java  UserJsonExport.java  Util.java
java/src/main/java/lol/memory/ts/archive/: Archive.java  BoundedCompletionService.java  FileResult.java  FileResultConsumer.java  ItemParser.java  Record.java  RecordConsumer.java  TarArchive.java  ZipArchive.java
java/src/main/java/lol/memory/ts/avro/: User.java
java/src/main/java/lol/memory/ts/db/: Database.java  DbRecordConsumer.java  Entry.java  ImportMetadata.java  ImportUsers.java  MetadataDbEntry.java  MetadataImporter.java  StatusValue.java  UserAvroImporter.java  UserDbEntry.java
java/src/main/resources/: logback.xml
java/src/test/java/lol/memory/ts/archive/: ArchiveTest.java
java/src/test/java/lol/memory/ts/db/: DatabaseTest.java
java/src/test/resources/: logback-test.xml
schemas/avro/: User.avsc
src/: avro.rs  error.rs  extended.rs  lib.rs  lookup.rs  report.rs
src/db/: entry.rs  mod.rs  tag.rs
src/db/entry/: full_status.rs  mod.rs  screen_name.rs  user.rs
