[package]
name = "memory_lol"
version = "0.1.0"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
repository = "https://github.com/travisbrown/memory-lol"
keywords = ["twitter", "wayback"]
license = "MPL-2.0"
edition = "2018"

[dependencies]
avro-rs = "0.13"
byteorder = "1"
bzip2 = "0.4"
chrono = { version = "0.4", features = ["serde"] }
clap = "3.0.0-beta.5"
futures = "0.3"
itertools = "0.10"
log = "0.4"
memmap = "0.7"
piz = "0.4"
rocksdb = "0.17"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
simplelog = "0.11"
tar = "0.4"
tempfile = "3.2"
thiserror = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
